--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="text_gray">#A1A1A1</color>
     <color name="black">#000000</color>
     <color name="orange">#ff6702</color>
+    <color name="color_blue">#33CCFF</color>
 </resources>
