--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,7 @@
     <LinearLayout
         android:id="@+id/loginText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="4">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
@@ -27,18 +26,17 @@
         android:id="@+id/loginInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
+            android:layout_marginTop="150dp"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:layout_weight="3"
             android:background="@drawable/bg_border">
 
             <TextView
@@ -52,7 +50,8 @@
                 android:layout_width="5dp"
                 android:layout_height="25dp"
                 android:gravity="center_vertical"
-                android:background="@mipmap/verticalline"/>
+                android:background="@mipmap/verticalline"
+                android:contentDescription="@string/split" />
             <EditText
                 android:id="@+id/phoneNumber"
                 android:maxLength="11"
@@ -60,7 +59,8 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                tools:ignore="LabelFor" />
             <Button
                 android:id="@+id/phoneNumberDelete"
                 android:layout_width="25dp"
@@ -73,12 +73,11 @@
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:layout_weight="3"
             android:background="@drawable/bg_border">
 
             <TextView
@@ -113,10 +112,10 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_weight="2"
             android:layout_gravity="center_horizontal">
 
             <Button
@@ -124,31 +123,34 @@
                 android:id="@+id/wechat"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@mipmap/wechat" />
+                android:background="@mipmap/wechat"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:layout_margin="20dp"
                 android:id="@+id/qq"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@mipmap/qq" />
+                android:background="@mipmap/qq"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:layout_margin="20dp"
                 android:id="@+id/weibo"
                 android:layout_width="30dp"
                 android:layout_height="25dp"
-                android:background="@mipmap/webo" />
+                android:background="@mipmap/webo"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2">
+        android:layout_height="wrap_content">
 
         <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
             android:id="@+id/loginButton"
@@ -164,9 +166,4 @@
             app:spinning_bar_padding="6dp" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3">
-    </RelativeLayout>
 </LinearLayout>
