--- a/app/src/main/res/layout/seen_item.xml
+++ b/app/src/main/res/layout/seen_item.xml
@@ -99,8 +99,8 @@
             <TextView
                 android:id="@+id/public_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
                 android:textColor="@color/text_gray"
                 android:textSize="16sp" />
 
