--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -12,5 +12,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="normal"
+        android:textSize="30sp"
         android:text="阅读笔记" />
 </LinearLayout>
