--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -29,15 +29,20 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#fff">
+        android:background="#ddd">
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="10dp"
+            android:background="#fff" >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="#fff"
             android:gravity="center_horizontal"
             >
             <TextView
@@ -187,11 +192,13 @@
                 android:layout_width="match_parent"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginBottom="30dp"
                 android:layout_height="50dp"
                 android:background="#3ccf1b"
                 android:text="完成记录"
                 android:textSize="16dp"
                 android:textColor="#fff"/>
         </LinearLayout>
+        </android.support.v7.widget.CardView>
     </ScrollView>
     </LinearLayout>
