--- a/app/src/main/res/layout/activity_seen.xml
+++ b/app/src/main/res/layout/activity_seen.xml
@@ -31,10 +31,16 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="#fff">
+        android:background="#ddd">
+    <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="10dp"
+            android:background="#fff" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -84,6 +90,7 @@
                 android:id="@+id/seen_comment"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
+                android:layout_marginEnd="10dp"
                 android:textSize="16dp"
                 android:textColor="@android:color/darker_gray"
                 android:background="@drawable/bg_border"/>
@@ -190,11 +197,13 @@
             android:layout_width="match_parent"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginBottom="30dp"
             android:layout_height="50dp"
             android:background="#3ccf1b"
             android:text="完成记录"
             android:textSize="16dp"
             android:textColor="#fff"/>
     </LinearLayout>
+    </android.support.v7.widget.CardView>
     </ScrollView>
 </LinearLayout>
