--- a/app/src/main/res/layout/activity_want_read.xml
+++ b/app/src/main/res/layout/activity_want_read.xml
@@ -25,110 +25,116 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="已读记录"
-            android:textSize="20dp"
+            android:text="想读"
+            android:textSize="20sp"
             android:textColor="@android:color/black"/>
     </android.support.v7.widget.Toolbar>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#ddd">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="10dp"
             android:background="#fff" >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:text="豆瓣评分"
-            android:gravity="center_horizontal"
-            android:textColor="@android:color/black"/>
-        <com.willy.ratingbar.ScaleRatingBar
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/bookRating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srb_starWidth="50dp"
-            app:srb_starHeight="50dp"
-            app:srb_starPadding="0dp"
-            app:srb_numStars="5"
-            app:srb_stepSize="0.1"
-            app:srb_rating="0"
-            app:srb_isIndicator="true"
-            app:srb_clickable="true"
-            app:srb_scrollable="true"
-            app:srb_clearRatingEnabled="true"
-            app:srb_drawableEmpty="@mipmap/star_empty"
-            app:srb_drawableFilled="@mipmap/star_full">
-        </com.willy.ratingbar.ScaleRatingBar>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:text="原因："
-                android:textSize="16dp"
-                android:textColor="@android:color/background_dark"
-                android:gravity="right|center_vertical"
-                />
-            <com.sendtion.xrichtext.RichTextEditor
-                android:id="@+id/want_read_reason"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:textSize="16dp"
-                android:textColor="@android:color/darker_gray"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp"
-            >
-            <TextView
-                android:layout_width="80dp"
-                android:layout_height="match_parent"
-                android:text="期望："
-                android:textSize="16dp"
-                android:textColor="@android:color/background_dark"
-                android:gravity="right|center_vertical"
-                />
-            <com.sendtion.xrichtext.RichTextEditor
-                android:id="@+id/want_read_hope"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:textSize="16dp"
-                android:textColor="@android:color/darker_gray"/>
-        </LinearLayout>
 
-        <Button
-            android:id="@+id/want_read_Button"
-            android:layout_marginTop="80dp"
-            android:layout_width="match_parent"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginBottom="30dp"
-            android:layout_height="50dp"
-            android:background="#3ccf1b"
-            android:text="完成记录"
-            android:textSize="16dp"
-            android:textColor="#fff"/>
-    </LinearLayout>
- </android.support.v7.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:textSize="20sp"
+                    android:text="@string/douban_score"
+                    android:gravity="center_horizontal"
+                    android:textColor="@android:color/black"/>
+                <com.willy.ratingbar.ScaleRatingBar
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/bookRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srb_starWidth="50dp"
+                    app:srb_starHeight="50dp"
+                    app:srb_starPadding="0dp"
+                    app:srb_numStars="5"
+                    app:srb_stepSize="0.1"
+                    app:srb_rating="0"
+                    app:srb_isIndicator="true"
+                    app:srb_clickable="true"
+                    app:srb_scrollable="true"
+                    app:srb_clearRatingEnabled="true"
+                    app:srb_drawableEmpty="@mipmap/star_empty"
+                    app:srb_drawableFilled="@mipmap/star_full">
+                </com.willy.ratingbar.ScaleRatingBar>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="10dp">
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:text="原因："
+                        android:textSize="16sp"
+                        android:textColor="@android:color/background_dark"
+                        android:gravity="right|center_vertical"
+                        tools:ignore="RtlHardcoded" />
+                    <com.sendtion.xrichtext.RichTextEditor
+                        android:id="@+id/want_read_reason"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/darker_gray"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:text="期望："
+                        android:textSize="16sp"
+                        android:textColor="@android:color/background_dark"
+                        android:gravity="right|center_vertical"
+                        tools:ignore="RtlHardcoded" />
+                    <com.sendtion.xrichtext.RichTextEditor
+                        android:id="@+id/want_read_hope"
+                        android:layout_height="wrap_content"
+                        android:layout_width="match_parent"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/darker_gray"/>
+                </LinearLayout>
+
+
+                <Button
+                    android:id="@+id/want_read_Button"
+                    android:layout_marginTop="80dp"
+                    android:layout_width="match_parent"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_height="50dp"
+                    android:background="#3ccf1b"
+                    android:text="完成记录"
+                    android:textSize="16sp"
+                    android:textColor="#fff"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </ScrollView>
 </LinearLayout>
