--- a/app/src/main/res/layout/activity_want_read.xml
+++ b/app/src/main/res/layout/activity_want_read.xml
@@ -43,14 +43,13 @@
             app:cardCornerRadius="8dp"
             app:cardElevation="10dp"
             android:background="#fff" >
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:gravity="center_horizontal">
-
+                android:gravity="center_horizontal"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
