--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -6,7 +6,7 @@
     android:background="#ddd"
     android:orientation="vertical"
     android:gravity="center_horizontal">
-        <android.support.v7.widget.Toolbar
+     <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/white">
@@ -32,173 +32,183 @@
         android:background="#ddd">
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="10dp"
-            android:background="#fff" >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center_horizontal"
-            >
-            <TextView
+            android:background="#fff">
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textSize="20dp"
-                android:text="评分"
+                android:layout_height="match_parent"
                 android:gravity="center_horizontal"
-                android:textColor="@android:color/black"/>
-            <com.willy.ratingbar.ScaleRatingBar
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/bookRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srb_starWidth="50dp"
-                app:srb_starHeight="50dp"
-                app:srb_starPadding="0dp"
-                app:srb_numStars="5"
-                app:srb_stepSize="0.1"
-                app:srb_rating="0"
-                app:srb_isIndicator="false"
-                app:srb_clickable="true"
-                app:srb_scrollable="true"
-                app:srb_clearRatingEnabled="true"
-                app:srb_drawableEmpty="@mipmap/star_empty"
-                app:srb_drawableFilled="@mipmap/star_full">
-            </com.willy.ratingbar.ScaleRatingBar>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:orientation="vertical">
+
                 <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="match_parent"
-                    android:text="笔记："
-                    android:textSize="16dp"
-                    android:textColor="@android:color/background_dark"
-                    android:gravity="right|center_vertical"
-                    />
-                <com.sendtion.xrichtext.RichTextEditor
-                    android:id="@+id/reading_note"
-                    android:layout_height="wrap_content"
                     android:layout_width="match_parent"
-                    android:textSize="16dp"
-                    android:textColor="@android:color/darker_gray"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp"
-                >
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="match_parent"
-                    android:text="原因："
-                    android:textSize="16dp"
-                    android:textColor="@android:color/background_dark"
-                    android:gravity="right|center_vertical"
-                    />
-                <com.sendtion.xrichtext.RichTextEditor
-                    android:id="@+id/reading_reason"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center_horizontal"
+                    android:text="评分"
+                    android:textColor="@android:color/black"
+                    android:textSize="20dp" />
+
+                <com.willy.ratingbar.ScaleRatingBar
+                    android:id="@+id/bookRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    app:srb_clearRatingEnabled="true"
+                    app:srb_clickable="true"
+                    app:srb_drawableEmpty="@mipmap/star_empty"
+                    app:srb_drawableFilled="@mipmap/star_full"
+                    app:srb_isIndicator="false"
+                    app:srb_numStars="5"
+                    app:srb_rating="0"
+                    app:srb_scrollable="true"
+                    app:srb_starHeight="50dp"
+                    app:srb_starPadding="0dp"
+                    app:srb_starWidth="50dp"
+                    app:srb_stepSize="0.1" />
+
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:textSize="16dp"
-                    android:textColor="@android:color/darker_gray"/>
-            </LinearLayout>
+                    android:layout_height="80dp"
+                    android:layout_marginTop="10dp"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp">
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-                    android:text="方式："
-                    android:textSize="16dp"
-                    android:textColor="@android:color/background_dark"
-                    android:gravity="right|center_vertical"
-                    />
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:gravity="right|center_vertical"
+                        android:text="笔记："
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="16dp" />
 
-                <Spinner
-                    android:id="@+id/reading_way"
-                    android:layout_width="200dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="50dp"
-                    android:entries="@array/readway"
-                    />
-            </LinearLayout>
+                    <com.sendtion.xrichtext.RichTextEditor
+                        android:id="@+id/reading_note"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/bg_border"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="16dp" />
+                </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp">
-                <TextView
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
 
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-                    android:text="位置："
-                    android:textSize="16dp"
-                    android:textColor="@android:color/background_dark"
-                    android:gravity="right|center_vertical"
-                    />
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:gravity="right|center_vertical"
+                        android:text="原因："
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="16dp" />
 
-                <TextView
-                    android:id="@+id/reading_adress_textview"
-                    android:layout_width="200dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:hint="选择读书地点"
-                    />
+                    <com.sendtion.xrichtext.RichTextEditor
+                        android:id="@+id/reading_reason"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/bg_border"
+                        android:textColor="@android:color/darker_gray"
+                        android:textSize="16dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="40dp"
+                        android:gravity="right|center_vertical"
+                        android:text="方式："
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="16dp" />
+
+                    <Spinner
+                        android:id="@+id/reading_way"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="50dp"
+                        android:entries="@array/readway" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="40dp"
+                        android:gravity="right|center_vertical"
+                        android:text="位置："
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/reading_adress_textview"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical|center_horizontal"
+                        android:hint="选择读书地点" />
+
+                    <Button
+                        android:id="@+id/reading_adress_button"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="10dp"
+                        android:background="@mipmap/adress" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="80dp"
+                        android:layout_height="40dp"
+                        android:gravity="right|center_vertical"
+                        android:text="分类："
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="16dp" />
+
+                    <TextView
+                        android:id="@+id/reading_classfy"
+                        android:layout_width="200dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:hint="点击选择图书分类" />
+                </LinearLayout>
+
                 <Button
-                    android:id="@+id/reading_adress_button"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="10dp"
-                    android:background="@mipmap/adress"/>
+                    android:id="@+id/reading_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="20dp"
+                    android:background="#3ccf1b"
+                    android:text="完成记录"
+                    android:textColor="#fff"
+                    android:textSize="16dp" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="5dp">
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-                    android:text="分类："
-                    android:textSize="16dp"
-                    android:textColor="@android:color/background_dark"
-                    android:gravity="right|center_vertical"
-                    />
-                <Spinner
-                    android:id="@+id/reading_classfy"
-                    android:layout_width="200dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="50dp"
-                    android:entries="@array/readclassfy"
-                  />
-            </LinearLayout>
-            <Button
-                android:id="@+id/reading_button"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_marginRight="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginBottom="30dp"
-                android:layout_height="50dp"
-                android:background="#3ccf1b"
-                android:text="完成记录"
-                android:textSize="16dp"
-                android:textColor="#fff"/>
-        </LinearLayout>
         </android.support.v7.widget.CardView>
     </ScrollView>
     </LinearLayout>
