--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,11 +8,11 @@
     android:orientation="vertical"
     tools:context="cn.a1949science.www.bookrecord.activity.StartActivity">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="normal"
-        android:textSize="30sp"
-        android:text="阅读笔记" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/app_start"
+        android:id="@+id/imageView"
+        android:scaleType="fitXY" />
 </LinearLayout>
