用户反馈弄好了，正在弄动态权限

--- a/app/src/main/res/layout/nav_header_home_page.xml
+++ b/app/src/main/res/layout/nav_header_home_page.xml
@@ -22,6 +22,6 @@
         android:id="@+id/nickname"
         android:textSize="20sp"
         android:text="暖倾心"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginStart="20dp"/>
 
 </LinearLayout>
