--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eee"
     android:orientation="vertical"
-    android:gravity="center_horizontal"
-  >
+    android:gravity="center_horizontal">
 <android.support.v7.widget.Toolbar
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -22,12 +18,13 @@
     <ImageView
         android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:src="@mipmap/verticalline" />
+        android:src="@mipmap/verticalline"
+        android:contentDescription="TODO" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="关于我们"
-        android:textSize="20dp"
+        android:text="@string/about_us"
+        android:textSize="20sp"
         android:textColor="@android:color/black"/>
 </android.support.v7.widget.Toolbar>
     <ScrollView
@@ -40,14 +37,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginTop="40dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/logo" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,13 +67,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:textSize="16dp"
+            android:layout_marginStart="10dp"
+            android:textSize="16sp"
             android:text="团队地址"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="100dp"
+            android:layout_marginStart="100dp"
             android:text="河北工业大学北辰校区"/>
     </LinearLayout>
     <LinearLayout
@@ -87,11 +85,12 @@
         android:gravity="center_vertical|center_horizontal"
         android:background="#fff">
         <Button
+            android:id="@+id/contactUs"
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:background="#02caff"
-            android:text="联系我们"
+            android:text="@string/contact_us"
             android:textColor="#fff"
-            android:textSize="18dp"/>
+            android:textSize="18sp"/>
     </LinearLayout>
 </LinearLayout>
