完善数据库操作类种类，优化toolbar

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -14,5 +14,5 @@
         android:layout_height="match_parent"
         app:srcCompat="@drawable/app_start"
         android:id="@+id/imageView"
-        android:scaleType="fitXY" />
+        android:scaleType="fitCenter" />
 </LinearLayout>
