--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,16 +16,11 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@mipmap/returnbutton" />
-        <ImageView
-            android:id="@+id/book_info_vertivalline"
-            android:layout_width="20dp"
-            android:layout_height="25dp"
-            android:background="@mipmap/verticalline"
-            android:contentDescription="@string/split" />
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:textSize="20sp"
             android:textColor="@android:color/black"/>
     </android.support.v7.widget.Toolbar>
