--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -7,23 +7,7 @@
     android:background="#eee"
     tools:context="cn.a1949science.www.bookrecord.activity.BookInfoActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white">
-        <Button
-            android:id="@+id/book_info_return"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@mipmap/returnbutton" />
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="20sp"
-            android:textColor="@android:color/black"/>
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/bar_main_text" />
 
     <ScrollView
         android:id="@+id/scrollView"
